fixed about and contact sections' layout (they get ruined when zoomed out too much)

--- a/src/components/Contact/contact.module.css
+++ b/src/components/Contact/contact.module.css
@@ -11,6 +11,10 @@
   @media (--mediaMobile) {
     padding-top: 0;
   }
+
+  @media only screen and (min-width: 3100px) {
+    min-height: 50vh;
+  }
 }
 
 .form {
