--- a/src/components/Profile/profile.module.css
+++ b/src/components/Profile/profile.module.css
@@ -1,6 +1,5 @@
 .profile {
   width: 100vw;
-  min-height: 100vh;
   margin-top: 60px;
   margin-bottom: 40px;
   padding-top: 60px;
